--- a/collated/main/A0113795Y.md
+++ b/collated/main/A0113795Y.md
@@ -41,6 +41,8 @@ public class CompleteCommand extends Command {
     public static final String MESSAGE_DUPLICATE_TAG = "This tag already exists in the tag list";
     public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the task manager.";
     public static final String MESSAGE_TAG_CONSTRAINTS = "Tags names should be alphanumeric";
+    public static final String MESSAGE_NULL_TIMING =
+            "Both the start and end timings must be specified for a recurring task";
 
     public final int targetIndex;
     public final EditTaskDescriptor completeTaskDescriptor;
@@ -81,8 +83,13 @@ public class CompleteCommand extends Command {
         updatedStartDate.setTiming(updatedStartDate.toString());
         updatedEndDate.setTiming(updatedEndDate.toString());
 
-        Task ret = new Task(updatedDescription, updatedPriority, updatedStartDate,
-                updatedEndDate, updatedTags, updatedRecurring, updatedFrequency);
+        Task ret;
+        try {
+            ret = new Task(updatedDescription, updatedPriority, updatedStartDate,
+                    updatedEndDate, updatedTags, updatedRecurring, updatedFrequency);
+        } catch (IllegalValueException e) {
+            throw new CommandException(MESSAGE_NULL_TIMING);
+        }
         ret.setComplete();
         return ret;
     }
@@ -106,6 +113,7 @@ import java.util.Optional;
 
 import seedu.task.commons.core.Messages;
 import seedu.task.commons.core.UnmodifiableObservableList;
+import seedu.task.commons.exceptions.IllegalValueException;
 import seedu.task.logic.commands.exceptions.CommandException;
 import seedu.task.model.tag.UniqueTagList;
 import seedu.task.model.task.Description;
@@ -130,6 +138,8 @@ public class PrioritizeCommand extends Command {
     public static final String MESSAGE_DUPLICATE_TAG = "This tag already exists in the tag list";
     public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the task manager.";
     public static final String MESSAGE_TAG_CONSTRAINTS = "Tags names should be alphanumeric";
+    public static final String MESSAGE_NULL_TIMING =
+            "Both the start and end timings must be specified for a recurring task";
 
     public final int targetIndex;
     public final EditTaskDescriptor prioritizeTaskDescriptor;
@@ -181,8 +191,12 @@ public class PrioritizeCommand extends Command {
         RecurringFrequency updatedFrequency = editTaskDescriptor.getFrequency()
                 .orElseGet(taskToPrioritize::getFrequency);
 
-        return new Task(updatedDescription, updatedPriority, updatedStartDate,
-                updatedEndDate, updatedTags, updatedRecurring, updatedFrequency);
+        try {
+            return new Task(updatedDescription, updatedPriority, updatedStartDate,
+                    updatedEndDate, updatedTags, updatedRecurring, updatedFrequency);
+        } catch (IllegalValueException e) {
+            throw new CommandException(MESSAGE_NULL_TIMING);
+        }
     }
 }
 ```
