--- a/collated/test/A0164212U.md
+++ b/collated/test/A0164212U.md
@@ -66,6 +66,14 @@
                 taskToAdd.getStartTiming(), taskToAdd.getEndTiming(), taskToAdd.getTags(),
                 taskToAdd.isRecurring(), taskToAdd.getFrequency());
         assertOccurrenceSame(hardCodedYear, taskYear.getOccurrences());
+
+        // //invalid add command for recurring task
+        //missing end time
+        commandBox.runCommand("add inValidRecTask sd/01/01/2017 r/2m");
+        assertResultMessage(Task.MESSAGE_MISSING_TIMING);
+        //missing start time
+        commandBox.runCommand("add inValidRecTask ed/05/11/2018 r/1y");
+        assertResultMessage(Task.MESSAGE_MISSING_TIMING);
 ```
 ###### \java\seedu\task\model\task\DescriptionTest.java
 ``` java
