--- a/collated/main/A0148038A.md
+++ b/collated/main/A0148038A.md
@@ -527,7 +527,7 @@ public class ByDate {
      * Checks if given ByDate string is valid
      *
      * @param a by date string to be checked
-     * @returns a boolean variable, true if it is valid, false otherwise
+     * @return a boolean variable, true if it is valid, false otherwise
      */
 ```
 ###### /java/seedu/whatsleft/model/activity/ByDate.java
