--- a/collated/main/A0139177W.md
+++ b/collated/main/A0139177W.md
@@ -1,5 +1,12 @@
 # A0139177W
-###### \java\seedu\ezdo\commons\util\MultipleIndexCommandUtil.java
+###### /java/seedu/ezdo/commons/core/Messages.java
+``` java
+    public static final String MESSAGE_RECUR_FAILURE = "Both the start and due dates cannot be empty "
+            + "with a recur status present.";
+
+}
+```
+###### /java/seedu/ezdo/commons/util/MultipleIndexCommandUtil.java
 ``` java
     /** checks if the tasks with the indexes specified are marked as done */
     public static boolean isDone(UnmodifiableObservableList<ReadOnlyTask> lastShownList,
@@ -13,7 +20,7 @@
         return true;
     }
 ```
-###### \java\seedu\ezdo\commons\util\MultipleIndexCommandUtil.java
+###### /java/seedu/ezdo/commons/util/MultipleIndexCommandUtil.java
 ``` java
 
     /** adds read only tasks from the unmodifiable observable list to the ArrayList list */
@@ -35,7 +42,42 @@
     }
 }
 ```
-###### \java\seedu\ezdo\logic\commands\SelectCommand.java
+###### /java/seedu/ezdo/commons/util/RecurUtil.java
+``` java
+/**
+ * Utility method for Recur
+ */
+public class RecurUtil {
+
+    /**
+     * Checks if a recurring status is valid with at least a start date and/or
+     * due date present in a task. Floating tasks should not have a recurring
+     * status.
+     * @param task
+     * @return false if the task is a floating task
+     * @return true otherwise
+     */
+    public static boolean isRecurValid(ReadOnlyTask task) {
+        assert task != null;
+        String taskStartDate = task.getStartDate().toString();
+        String taskDueDate = task.getDueDate().toString();
+
+        final boolean isStartDateMissing = taskStartDate.isEmpty();
+        final boolean isDueDateMissing = taskDueDate.isEmpty();
+        final boolean isBothDatesMissing = isStartDateMissing && isDueDateMissing;
+
+        final boolean isRecurring = task.getRecur().isRecur();
+
+        if (isBothDatesMissing && isRecurring) {
+            return false;
+        }
+
+        return true;
+    }
+
+}
+```
+###### /java/seedu/ezdo/logic/commands/SelectCommand.java
 ``` java
 /**
  * Selects a task identified using its last displayed index from ezDo.
@@ -86,7 +128,7 @@ public class SelectCommand extends Command {
 
 }
 ```
-###### \java\seedu\ezdo\logic\parser\DateParser.java
+###### /java/seedu/ezdo/logic/parser/DateParser.java
 ``` java
     /**
      * Uses Natty dependency (natural language date parser) to manipulate date
@@ -103,7 +145,7 @@ public class SelectCommand extends Command {
             List<DateGroup> dateGroupList = parser.parse(taskDate);
 
             // Retrieves parsed date
-            Date parsedDate = dateGroupList.get(0).getDates().get(0);
+            Date parsedDate = retrieveParsedDate(dateGroupList);
 
             // Format parsed date to suit the UI
             return USER_OUTPUT_DATE_FORMAT.format(parsedDate);
@@ -112,13 +154,25 @@ public class SelectCommand extends Command {
             return taskDate;
         }
     }
-```
-###### \java\seedu\ezdo\logic\parser\DateParser.java
-``` java
 
+    /**
+     * Returns the parsed date from dateGroupList
+     * @param dateGroupList  A list of DateGroup which contains a list of Dates.
+     * @return parsedDate    The parsed date.
+     */
+    private Date retrieveParsedDate(List<DateGroup> dateGroupList) {
+        int firstElement = 0;
+        DateGroup parsedDateGroup = dateGroupList.get(firstElement);
+        List<Date> parsedDateList = parsedDateGroup.getDates();
+        Date parsedDate = parsedDateList.get(firstElement);
+        return parsedDate;
+    }
+```
+###### /java/seedu/ezdo/logic/parser/DateParser.java
+``` java
 }
 ```
-###### \java\seedu\ezdo\logic\parser\ParserUtil.java
+###### /java/seedu/ezdo/logic/parser/ParserUtil.java
 ``` java
     /**
      * Parses a {@code Optional<String> recur} into an {@code Optional<Recur>} if {@code recur} is present.
@@ -128,7 +182,7 @@ public class SelectCommand extends Command {
         return recur.isPresent() ? Optional.of(new Recur(recur.get())) : Optional.empty();
     }
 ```
-###### \java\seedu\ezdo\model\EzDo.java
+###### /java/seedu/ezdo/model/EzDo.java
 ``` java
     public void toggleTasksSelect(ArrayList<Task> p) {
         for (int i = 0; i < p.size(); i++) {
@@ -185,7 +239,7 @@ public class SelectCommand extends Command {
         return originalDate;
     }
 ```
-###### \java\seedu\ezdo\model\ModelManager.java
+###### /java/seedu/ezdo/model/ModelManager.java
 ``` java
     @Override
     public boolean toggleTasksSelect(ArrayList<Task> tasksToToggle) {
@@ -197,7 +251,7 @@ public class SelectCommand extends Command {
         return isSetToSelect;
     }
 ```
-###### \java\seedu\ezdo\model\ModelManager.java
+###### /java/seedu/ezdo/model/ModelManager.java
 ``` java
 
     /**
@@ -210,9 +264,10 @@ public class SelectCommand extends Command {
      */
     @Override
     public void updateTask(int filteredTaskListIndex, ReadOnlyTask editedTask)
-            throws UniqueTaskList.DuplicateTaskException, DateException {
+            throws UniqueTaskList.DuplicateTaskException, DateException, RecurException {
         assert editedTask != null;
         checkTaskDate(editedTask);
+        checkRecur(editedTask);
         updateStacks();
         int ezDoIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
         ezDo.updateTask(ezDoIndex, editedTask);
@@ -280,7 +335,23 @@ public class SelectCommand extends Command {
     }
 
 ```
-###### \java\seedu\ezdo\model\todo\DueDate.java
+###### /java/seedu/ezdo/model/ModelManager.java
+``` java
+    /**
+     * Throws a RecurException if a floating task is found with a recurring status.
+     * @param   readOnlyTask
+     * @throws  RecurException  A floating task is found with recurring status.
+     */
+    public void checkRecur(ReadOnlyTask readOnlyTask) throws RecurException {
+        String recurErrorMessage = "To set a recur status, both start and due dates cannot be empty.";
+        assert readOnlyTask != null;
+        if (!RecurUtil.isRecurValid(readOnlyTask)) {
+            throw new RecurException(recurErrorMessage);
+        }
+    }
+}
+```
+###### /java/seedu/ezdo/model/todo/DueDate.java
 ``` java
 /**
  * Represents the due date of a task.
@@ -304,7 +375,7 @@ public class DueDate extends TaskDate {
     }
 
 ```
-###### \java\seedu\ezdo\model\todo\Recur.java
+###### /java/seedu/ezdo/model/todo/Recur.java
 ``` java
 /**
  * Represents a Task's recurring interval in ezDo. Guarantees: immutable; is
@@ -380,7 +451,7 @@ public class Recur {
 
 }
 ```
-###### \java\seedu\ezdo\model\util\SampleDataUtil.java
+###### /java/seedu/ezdo/model/util/SampleDataUtil.java
 ``` java
 public class SampleDataUtil {
     public static Task[] getSampleTasks() {
@@ -439,7 +510,7 @@ public class SampleDataUtil {
         }
     }
 ```
-###### \java\seedu\ezdo\ui\CommandBox.java
+###### /java/seedu/ezdo/ui/CommandBox.java
 ``` java
     @FXML
     private void handleCommandInputChanged() {
@@ -466,7 +537,7 @@ public class SampleDataUtil {
         }
     }
 ```
-###### \java\seedu\ezdo\ui\CommandBox.java
+###### /java/seedu/ezdo/ui/CommandBox.java
 ``` java
 
     /**
@@ -485,7 +556,7 @@ public class SampleDataUtil {
 
 }
 ```
-###### \java\seedu\ezdo\ui\TaskCard.java
+###### /java/seedu/ezdo/ui/TaskCard.java
 ``` java
 public class TaskCard extends UiPart<Region> {
 
@@ -656,11 +727,11 @@ public class TaskCard extends UiPart<Region> {
     }
 }
 ```
-###### \java\seedu\ezdo\ui\TaskCard.java
+###### /java/seedu/ezdo/ui/TaskCard.java
 ``` java
 
 ```
-###### \java\seedu\ezdo\ui\TaskCardHeader.java
+###### /java/seedu/ezdo/ui/TaskCardHeader.java
 ``` java
 public class TaskCardHeader extends UiPart<Region> {
 
@@ -678,11 +749,11 @@ public class TaskCardHeader extends UiPart<Region> {
 
 }
 ```
-###### \java\seedu\ezdo\ui\TaskCardHeader.java
+###### /java/seedu/ezdo/ui/TaskCardHeader.java
 ``` java
 
 ```
-###### \resources\view\DarkTheme.css
+###### /resources/view/DarkTheme.css
 ``` css
 
 .background {
@@ -901,7 +972,7 @@ public class TaskCardHeader extends UiPart<Region> {
     -fx-font-size: 16px;
 }
 ```
-###### \resources\view\Extensions.css
+###### /resources/view/Extensions.css
 ``` css
 .error {
     -fx-background-color: pink;
@@ -923,7 +994,7 @@ public class TaskCardHeader extends UiPart<Region> {
     -fx-text-fill: white;
 }
 ```
-###### \resources\view\MainWindow.fxml
+###### /resources/view/MainWindow.fxml
 ``` fxml
 
 <?import java.net.URL?>
@@ -996,7 +1067,7 @@ public class TaskCardHeader extends UiPart<Region> {
    </padding>
 </VBox>
 ```
-###### \resources\view\TaskCardHeader.fxml
+###### /resources/view/TaskCardHeader.fxml
 ``` fxml
 
 <?import javafx.geometry.Insets?>
@@ -1062,7 +1133,7 @@ public class TaskCardHeader extends UiPart<Region> {
    </opaqueInsets>
 </HBox>
 ```
-###### \resources\view\TaskListCard.fxml
+###### /resources/view/TaskListCard.fxml
 ``` fxml
 
 <?import java.net.URL?>
@@ -1087,7 +1158,7 @@ public class TaskCardHeader extends UiPart<Region> {
          <children>
             <HBox spacing="5.0">
                <children>
-                  <AnchorPane fx:id="priorityColor" minHeight="30.0" minWidth="10.0" prefWidth="10.0" styleClass="anchor-pane">
+                  <AnchorPane fx:id="priorityColor" minHeight="60.0" minWidth="10.0" prefWidth="10.0" styleClass="anchor-pane">
 
                      <children>
                         <Label fx:id="priority" alignment="CENTER" maxWidth="0.0" styleClass="priority_number" textAlignment="CENTER" wrapText="true" />
@@ -1153,7 +1224,7 @@ public class TaskCardHeader extends UiPart<Region> {
    </opaqueInsets>
 </HBox>
 ```
-###### \resources\view\TaskListPanel.fxml
+###### /resources/view/TaskListPanel.fxml
 ``` fxml
 
 <?import java.net.URL?>
