--- a/collated/main/A0139248X.md
+++ b/collated/main/A0139248X.md
@@ -1,11 +1,9 @@
 # A0139248X
-###### \java\seedu\ezdo\commons\core\Messages.java
+###### /java/seedu/ezdo/commons/core/Messages.java
 ``` java
     public static final String MESSAGE_TASK_DATES_INVALID = "Start date is after due date!";
-
-}
 ```
-###### \java\seedu\ezdo\commons\events\model\SortCriteriaChangedEvent.java
+###### /java/seedu/ezdo/commons/events/model/SortCriteriaChangedEvent.java
 ``` java
 package seedu.ezdo.commons.events.model;
 
@@ -34,7 +32,7 @@ public class SortCriteriaChangedEvent extends BaseEvent {
     }
 }
 ```
-###### \java\seedu\ezdo\commons\events\storage\EzDoDirectoryChangedEvent.java
+###### /java/seedu/ezdo/commons/events/storage/EzDoDirectoryChangedEvent.java
 ``` java
 package seedu.ezdo.commons.events.storage;
 
@@ -61,7 +59,7 @@ public class EzDoDirectoryChangedEvent extends BaseEvent {
     }
 }
 ```
-###### \java\seedu\ezdo\commons\util\DateUtil.java
+###### /java/seedu/ezdo/commons/util/DateUtil.java
 ``` java
 package seedu.ezdo.commons.util;
 
@@ -106,7 +104,7 @@ public class DateUtil {
 
 
 ```
-###### \java\seedu\ezdo\commons\util\MultipleIndexCommandUtil.java
+###### /java/seedu/ezdo/commons/util/MultipleIndexCommandUtil.java
 ``` java
 package seedu.ezdo.commons.util;
 
@@ -128,7 +126,7 @@ public class MultipleIndexCommandUtil {
     }
 
 ```
-###### \java\seedu\ezdo\logic\commands\AddCommand.java
+###### /java/seedu/ezdo/logic/commands/AddCommand.java
 ``` java
     /**
      * Executes the add command.
@@ -148,11 +146,14 @@ public class MultipleIndexCommandUtil {
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
         } catch (DateException de) {
             throw new CommandException(Messages.MESSAGE_TASK_DATES_INVALID);
+        } catch (RecurException re) {
+            throw new CommandException(Messages.MESSAGE_RECUR_FAILURE);
         }
     }
+
 }
 ```
-###### \java\seedu\ezdo\logic\commands\DoneCommand.java
+###### /java/seedu/ezdo/logic/commands/DoneCommand.java
 ``` java
     /**
      * Executes the done command.
@@ -180,7 +181,7 @@ public class MultipleIndexCommandUtil {
     }
 }
 ```
-###### \java\seedu\ezdo\logic\commands\EditCommand.java
+###### /java/seedu/ezdo/logic/commands/EditCommand.java
 ``` java
     /**
      * Executes the edit command.
@@ -201,6 +202,8 @@ public class MultipleIndexCommandUtil {
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
         } catch (DateException de) {
             throw new CommandException(Messages.MESSAGE_TASK_DATES_INVALID);
+        } catch (RecurException re) {
+            throw new CommandException(Messages.MESSAGE_RECUR_FAILURE);
         }
         model.updateFilteredListToShowAll();
         lastShownList = model.getFilteredTaskList(); // to scroll to edited task
@@ -208,7 +211,7 @@ public class MultipleIndexCommandUtil {
         return new CommandResult(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit));
     }
 ```
-###### \java\seedu\ezdo\logic\commands\KillCommand.java
+###### /java/seedu/ezdo/logic/commands/KillCommand.java
 ``` java
 package seedu.ezdo.logic.commands;
 
@@ -268,7 +271,7 @@ public class KillCommand extends Command {
     }
 }
 ```
-###### \java\seedu\ezdo\logic\commands\RedoCommand.java
+###### /java/seedu/ezdo/logic/commands/RedoCommand.java
 ``` java
 package seedu.ezdo.logic.commands;
 
@@ -303,7 +306,7 @@ public class RedoCommand extends Command {
     }
 }
 ```
-###### \java\seedu\ezdo\logic\commands\SaveCommand.java
+###### /java/seedu/ezdo/logic/commands/SaveCommand.java
 ``` java
 package seedu.ezdo.logic.commands;
 
@@ -369,7 +372,7 @@ public class SaveCommand extends Command {
     }
 }
 ```
-###### \java\seedu\ezdo\logic\commands\UndoCommand.java
+###### /java/seedu/ezdo/logic/commands/UndoCommand.java
 ``` java
 package seedu.ezdo.logic.commands;
 
@@ -404,7 +407,7 @@ public class UndoCommand extends Command {
     }
 }
 ```
-###### \java\seedu\ezdo\logic\parser\KillCommandParser.java
+###### /java/seedu/ezdo/logic/parser/KillCommandParser.java
 ``` java
 package seedu.ezdo.logic.parser;
 
@@ -442,7 +445,7 @@ public class KillCommandParser implements CommandParser {
     }
 }
 ```
-###### \java\seedu\ezdo\logic\parser\ParserUtil.java
+###### /java/seedu/ezdo/logic/parser/ParserUtil.java
 ``` java
     /**
      * Returns the specified indexes in the {@code command} if they are
@@ -463,7 +466,7 @@ public class KillCommandParser implements CommandParser {
     }
 
 ```
-###### \java\seedu\ezdo\logic\parser\SaveCommandParser.java
+###### /java/seedu/ezdo/logic/parser/SaveCommandParser.java
 ``` java
 package seedu.ezdo.logic.parser;
 
@@ -499,7 +502,7 @@ public class SaveCommandParser implements CommandParser {
 
 }
 ```
-###### \java\seedu\ezdo\MainApp.java
+###### /java/seedu/ezdo/MainApp.java
 ``` java
     /**
      * Updates the sort criteria in the user prefs
@@ -510,7 +513,7 @@ public class SaveCommandParser implements CommandParser {
         this.userPrefs.updateLastUsedSortCriteria(event.getNewSortCriteria());
     }
 ```
-###### \java\seedu\ezdo\model\EzDo.java
+###### /java/seedu/ezdo/model/EzDo.java
 ``` java
     /**
      * Removes the tasks in {@code tasksToKill} from ezDo.
@@ -536,7 +539,7 @@ public class SaveCommandParser implements CommandParser {
     }
 
 ```
-###### \java\seedu\ezdo\model\FixedStack.java
+###### /java/seedu/ezdo/model/FixedStack.java
 ``` java
 package seedu.ezdo.model;
 
@@ -608,7 +611,7 @@ public class FixedStack<T> {
     }
 }
 ```
-###### \java\seedu\ezdo\model\Model.java
+###### /java/seedu/ezdo/model/Model.java
 ``` java
     /**
      * Deletes the given tasks.
@@ -622,8 +625,9 @@ public class FixedStack<T> {
      *
      * @throws DuplicateTaskException if the same task (all attributes and fields same) is already in ezDo
      * @throws DateException if the start date is after the due date
+     * @throws RecurException if a floating task is found with a recurring status.
      */
-    void addTask(Task task) throws UniqueTaskList.DuplicateTaskException, DateException;
+    void addTask(Task task) throws UniqueTaskList.DuplicateTaskException, DateException, RecurException;
 
     /**
      * Checks the task and makes sure the dates are logical.
@@ -655,7 +659,7 @@ public class FixedStack<T> {
     /** Update stacks when new command is executed*/
     void updateStacks();
 ```
-###### \java\seedu\ezdo\model\ModelManager.java
+###### /java/seedu/ezdo/model/ModelManager.java
 ``` java
     private SortCriteria currentSortCriteria;
     private Boolean currentIsSortedAscending;
@@ -705,7 +709,7 @@ public class FixedStack<T> {
     }
 
 ```
-###### \java\seedu\ezdo\model\ModelManager.java
+###### /java/seedu/ezdo/model/ModelManager.java
 ``` java
     /**
      * Deletes the tasks in {@code tasksToKill}.
@@ -730,8 +734,10 @@ public class FixedStack<T> {
      *             if the dates are invalid (start date after due date)
      */
     @Override
-    public synchronized void addTask(Task task) throws UniqueTaskList.DuplicateTaskException, DateException {
+    public synchronized void addTask(Task task)
+            throws UniqueTaskList.DuplicateTaskException, DateException, RecurException {
         checkTaskDate(task);
+        checkRecur(task);
         updateStacks();
         ezDo.addTask(task);
         ezDo.sortTasks(currentSortCriteria, currentIsSortedAscending);
@@ -758,7 +764,7 @@ public class FixedStack<T> {
     }
 
 ```
-###### \java\seedu\ezdo\model\ModelManager.java
+###### /java/seedu/ezdo/model/ModelManager.java
 ``` java
     /**
      * Raises a {@code SortCriteriaChangedEvent}.
@@ -769,7 +775,7 @@ public class FixedStack<T> {
     }
 
 ```
-###### \java\seedu\ezdo\model\todo\ReadOnlyTask.java
+###### /java/seedu/ezdo/model/todo/ReadOnlyTask.java
 ``` java
     /**
      * Formats the task as text, showing all task details.
@@ -798,7 +804,7 @@ public class FixedStack<T> {
     }
 }
 ```
-###### \java\seedu\ezdo\model\UserPrefs.java
+###### /java/seedu/ezdo/model/UserPrefs.java
 ``` java
     public void updateLastUsedSortCriteria(SortCriteria sortCriteria) {
         this.sortCriteria = sortCriteria;
@@ -809,7 +815,7 @@ public class FixedStack<T> {
     }
 
 ```
-###### \java\seedu\ezdo\storage\EzDoStorage.java
+###### /java/seedu/ezdo/storage/EzDoStorage.java
 ``` java
 package seedu.ezdo.storage;
 
@@ -869,7 +875,7 @@ public interface EzDoStorage {
     void moveEzDo(String newPath, String oldPath) throws IOException;
 }
 ```
-###### \java\seedu\ezdo\storage\Storage.java
+###### /java/seedu/ezdo/storage/Storage.java
 ``` java
 package seedu.ezdo.storage;
 
@@ -951,7 +957,7 @@ public interface Storage extends EzDoStorage, UserPrefsStorage {
     void handleEzDoDirectoryChangedEvent(EzDoDirectoryChangedEvent ezdce);
 }
 ```
-###### \java\seedu\ezdo\storage\StorageManager.java
+###### /java/seedu/ezdo/storage/StorageManager.java
 ``` java
     public StorageManager(EzDoStorage ezDoStorage, UserPrefsStorage userPrefsStorage, Config config) {
         super();
@@ -964,7 +970,7 @@ public interface Storage extends EzDoStorage, UserPrefsStorage {
         this(new XmlEzDoStorage(ezDoFilePath), new JsonUserPrefsStorage(userPrefsFilePath), config);
     }
 ```
-###### \java\seedu\ezdo\storage\StorageManager.java
+###### /java/seedu/ezdo/storage/StorageManager.java
 ``` java
     /**
      * Moves the ezDo storage file to the new path, updates the config file and sets the ezdo file path
@@ -1007,7 +1013,7 @@ public interface Storage extends EzDoStorage, UserPrefsStorage {
     }
 }
 ```
-###### \java\seedu\ezdo\storage\XmlEzDoStorage.java
+###### /java/seedu/ezdo/storage/XmlEzDoStorage.java
 ``` java
     /**
      * Moves the ezDo storage file to the new path
@@ -1028,7 +1034,7 @@ public interface Storage extends EzDoStorage, UserPrefsStorage {
     }
 }
 ```
-###### \java\seedu\ezdo\ui\StatusBarFooter.java
+###### /java/seedu/ezdo/ui/StatusBarFooter.java
 ``` java
     /**
      * Updates the status bar footer to show the new ezdo storage file path and the last updated time
