--- a/collated/test/A0139177W.md
+++ b/collated/test/A0139177W.md
@@ -1,5 +1,5 @@
 # A0139177W
-###### \java\guitests\CommandBoxTest.java
+###### /java/guitests/CommandBoxTest.java
 ``` java
 public class CommandBoxTest extends EzDoGuiTest {
 
@@ -53,7 +53,15 @@ public class CommandBoxTest extends EzDoGuiTest {
 
 }
 ```
-###### \java\guitests\guihandles\TaskCardHandle.java
+###### /java/guitests/EditCommandTest.java
+``` java
+    @Test
+    public void edit_EmptyDatesWithRecur_failure() {
+        commandBox.runCommand("edit 1 s/ d/");
+        assertResultMessage(Messages.MESSAGE_RECUR_FAILURE);
+    }
+```
+###### /java/guitests/guihandles/TaskCardHandle.java
 ``` java
 /**
  * Provides a handle to a task card in the task list panel.
@@ -163,7 +171,7 @@ public class TaskCardHandle extends GuiHandle {
     }
 }
 ```
-###### \java\seedu\ezdo\model\task\RecurTest.java
+###### /java/seedu/ezdo/model/task/RecurTest.java
 ``` java
     @Test
     public void isValidRecur() {
@@ -210,7 +218,7 @@ public class TaskCardHandle extends GuiHandle {
     }
 
 ```
-###### \java\seedu\ezdo\testutil\TestUtil.java
+###### /java/seedu/ezdo/testutil/TestUtil.java
 ``` java
     private static Task[] getSampleTaskData() {
         try {
@@ -234,7 +242,7 @@ public class TaskCardHandle extends GuiHandle {
         }
     }
 ```
-###### \java\seedu\ezdo\testutil\TestUtil.java
+###### /java/seedu/ezdo/testutil/TestUtil.java
 ``` java
 
     private static Tag[] getSampleTagData() {
@@ -502,7 +510,7 @@ public class TaskCardHandle extends GuiHandle {
 
 }
 ```
-###### \java\seedu\ezdo\testutil\TypicalTestTasks.java
+###### /java/seedu/ezdo/testutil/TypicalTestTasks.java
 ``` java
 /**
  * Generates the tasks for testing.
@@ -682,7 +690,7 @@ public class TypicalTestTasks {
 
 }
 ```
-###### \java\seedu\ezdo\testutil\TypicalTestTasks.java
+###### /java/seedu/ezdo/testutil/TypicalTestTasks.java
 ``` java
 
 ```
