--- a/collated/test/A0141010L.md
+++ b/collated/test/A0141010L.md
@@ -1,5 +1,5 @@
 # A0141010L
-###### \java\guitests\DoneCommandTest.java
+###### /java/guitests/DoneCommandTest.java
 ``` java
 public class DoneCommandTest extends EzDoGuiTest {
 
@@ -161,7 +161,7 @@ public class DoneCommandTest extends EzDoGuiTest {
     }
 }
 ```
-###### \java\guitests\FindCommandTest.java
+###### /java/guitests/FindCommandTest.java
 ``` java
 public class FindCommandTest extends EzDoGuiTest {
 
@@ -207,7 +207,7 @@ public class FindCommandTest extends EzDoGuiTest {
     }
 
 ```
-###### \java\guitests\FindCommandTest.java
+###### /java/guitests/FindCommandTest.java
 ``` java
     @Test
     public void find_emptyList() {
