--- a/collated/test/A0140887W.md
+++ b/collated/test/A0140887W.md
@@ -181,6 +181,17 @@ public class LoadCommandTest extends DoistGUITest {
         assertLoadFailure(MISSING_FILE.getAbsolutePath(), LoadCommand.MESSAGE_NOT_FILE);
     }
 
+    @Test
+    public void loadWithEmpty() {
+        commandBox.runCommand("load ");
+        assertResultMessage(String.format(LoadCommand.MESSAGE_INVALID_PATH,
+                                            LoadCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand("load");
+        assertResultMessage(String.format(LoadCommand.MESSAGE_INVALID_PATH,
+                                              LoadCommand.MESSAGE_USAGE));
+    }
+
     private void assertLoadSuccess(String path, ReadOnlyTodoList loadedList) {
         commandBox.runCommand("load " + path);
 
@@ -237,7 +248,7 @@ public class UnfinishCommandTest extends DoistGUITest {
     }
 
     @Test
-    public void finish() {
+    public void unfinish() {
 
         //Unfinish the first in the list
         TestTask[] currentList = td.getAllFinishedTypicalTasks();
@@ -258,6 +269,17 @@ public class UnfinishCommandTest extends DoistGUITest {
 
         // Unfinish a task that is already not finished
         assertAlreadyUnfinished(1, currentList);
+    }
+
+    @Test
+    public void unfinishWithEmpty() {
+        commandBox.runCommand("unfinish ");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+                                          UnfinishCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand("unfinish");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+                                          UnfinishCommand.MESSAGE_USAGE));
     }
 
     /**
@@ -446,6 +468,46 @@ public class PriorityTest {
         return Priority.isValidPriority(Priority.processPriorityString(str));
     }
 }
+```
+###### \java\seedu\doist\storage\StorageManagerTest.java
+``` java
+    @Test
+    public void getAliasListMapFilePath() {
+        assertNotNull(storageManager.getAliasListMapFilePath());
+    }
+
+    @Test
+    public void getUserPrefsFilePath() {
+        assertNotNull(storageManager.getUserPrefsFilePath());
+    }
+
+    @Test
+    public void setAliasListMapFilePath() {
+        storageManager.setAliasListMapFilePath("test/aliaslistmap.xml");
+        assertEquals(storageManager.getAliasListMapFilePath(), "test/aliaslistmap.xml");
+    }
+
+    @Test
+    public void setUserPrefsFilePath() {
+        storageManager.setUserPrefsFilePath("test/prefs.xml");
+        assertEquals(storageManager.getUserPrefsFilePath(), "test/prefs.xml");
+    }
+
+    @Test
+    public void setTodoListFilePath() {
+        storageManager.setTodoListFilePath("test/todolist.xml");
+        assertEquals(storageManager.getTodoListFilePath(), "test/todolist.xml");
+    }
+
+    @Test
+    public void handleAbsoluteStoragePathChangedEvent_eventRaised() {
+        storageManager.handleAbsoluteStoragePathChangedEvent(new AbsoluteStoragePathChangedEvent("todo.xml",
+                "alias.xml", "pref.xml"));
+        assertEquals(storageManager.getTodoListFilePath(), "todo.xml");
+        assertEquals(storageManager.getUserPrefsFilePath(), "pref.xml");
+        assertEquals(storageManager.getAliasListMapFilePath(), "alias.xml");
+    }
+
 ```
 ###### \java\seedu\doist\TestApp.java
 ``` java
