--- a/collated/main/A0139975J.md
+++ b/collated/main/A0139975J.md
@@ -219,6 +219,13 @@ public class UndoneCommandParser extends CommandParser {
 ```
 ###### /java/seedu/task/model/ModelManager.java
 ``` java
+    @Override
+    public void updateFilteredTaskListFloat() {
+        updateFilteredTaskList(new PredicateExpression(new FloatDateQualifier()));
+    }
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
     private class DateQualifier implements Qualifier {
 
         private Date date;
