--- a/collated/main/A0142939W.md
+++ b/collated/main/A0142939W.md
@@ -170,6 +170,22 @@ public class SaveCommand extends Command {
     /** Changes the load path for data to be loaded from*/
     void loadFromLocation(String loadPath);
 ```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+    @Override
+    public void changeFilePath(String newPath) {
+        indicateFilePathChanged(newPath);
+        indicateTaskManagerChanged("");
+    }
+
+```
+###### /java/seedu/task/model/ModelManager.java
+``` java
+    @Override
+    public void loadFromLocation(String loadPath) {
+        indicateFilePathChanged(loadPath);
+    }
+```
 ###### /java/seedu/task/model/tag/TagColorMap.java
 ``` java
 /**
